@@ -1,3 +1,10 @@
+2023-12-23  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* am/euptex.am:
+	Do not build binaries of e-pTeX and
+	we use alias of e-upTeX for e-pTeX by default.
+	https://github.com/texjporg/tex-jp-build/issues/32
+
 2023-11-25  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
 
 	* wcfname{,0}.test: Add tests for --recorder and *.fls.
