@@ -1,3 +1,10 @@
+2023-12-23  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* Makefile.in, ac/web2c.ac (eptex):
+	Do not build binaries of e-pTeX and
+	we use alias of e-upTeX for e-pTeX by default.
+	https://github.com/texjporg/tex-jp-build/issues/32
+
 2023-12-02  Andreas Scherer  <https://ascherer.github.io>
 
 	* ctangleboot.cin: CWEB 4.11 release.
